<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transferir">

    <TextView
        android:id="@+id/nombreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/nombreCampo"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/cedulaText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/nombreCampo"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/nombreCampo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/edit_black_border"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/CedulaCampo"
        app:layout_constraintLeft_toRightOf="@id/nombreText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/cedulaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/CedulaCampo"
        android:text="@string/cedula"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/CantidadText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/CedulaCampo"
        app:layout_constraintTop_toBottomOf="@id/nombreText"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/CedulaCampo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/edit_black_border"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/CantidadCampo"
        app:layout_constraintLeft_toRightOf="@id/cedulaText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreCampo"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/CantidadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/CantidadCampo"
        android:text="cantidad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/DescipcionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/CantidadCampo"
        app:layout_constraintTop_toBottomOf="@id/cedulaText"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/CantidadCampo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/edit_black_border"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/DescripcionCampo"
        app:layout_constraintLeft_toRightOf="@id/CantidadText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CedulaCampo"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/DescipcionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/DescripcionCampo"
        android:text="descripcion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/ButtonEnviar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DescripcionCampo"
        app:layout_constraintTop_toBottomOf="@id/CantidadText"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/DescripcionCampo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/edit_black_border"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/ButtonEnviar"
        app:layout_constraintLeft_toRightOf="@id/DescipcionText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CantidadCampo"
        android:gravity="center"
        />

    <Button
        android:id="@+id/ButtonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DescripcionCampo"
        android:backgroundTint="@color/naranjaLogo"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>